kube/secret-testing-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-testing-pod
spec:
  containers:
  - name: mypod
    image: redis
    volumeMounts:
    - name: secret-data-name
      mountPath: "/etc/foo"
      readOnly: true
  volumes:
  - name: secret-data-name
    secret:
      secretName: secret-data
      optional: false
