kube/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: hello-world-kuber-app
  ports:
  - name: app-svc-port
    protocol: TCP
    port: 9998
    targetPort: http-port
  type: NodePort
